2004-10-09  Phil Blundell  <pb@nexus.co.uk>

	* gtkdatesel.h (gtk_date_sel_move_day): Really add prototype.

	* week_view.c (struct week_day): Delete 'initialized'.
	(week_view, week_view_update): Remove references to above member.
	(day_changed_calendar): New function.
	(changed_callback): Rename to ...
	(day_changed_datesel): ... this.  Keep calendar up to date.
	(update_hook_callback): Keep calendar up to date.  No need to call
	gtk_widget_draw on datesel.
	(week_view_key_press_event): Fix warnings.  Keep calendar up to
	date.

	* main.c (time_from_day): Don't force time to 00:00.

	* day_view.c (day_view): Add calendar if screen is landscape.
	(list_exposed): Fix warning.
	(update_hook_callback): Keep calendar up to date.  No need to call
	gtk_widget_draw on datesel.
	(changed_callback): Rename to ...
	(date_sel_changed): ... this.  Keep calendar up to date.
	(day_changed_calendar): New function.

	* gtkdatesel.c (gtk_date_sel_set_month_style): Calculate maximum
	width of month string.
	(gtk_date_sel_init): Likewise for year.
	(make_field): Rework widget packing to prevent arrows from moving
	around.
	(struct elem): Add container.  Remove arrow_l and arrow_r.

2004-10-07  Phil Blundell  <pb@nexus.co.uk>

	* Version 0.57 released.

2004-10-07  Phil Blundell  <pb@nexus.co.uk>

	* future_view.c, future_view.h: Deleted.
	* Makefile (MEMBERS): Remove future_view.
	* main.c: Delete references to future_view.	

2004-10-07  Phil Blundell  <pb@nexus.co.uk>

	* day_view.c (list_key_press_event): Use left/right keys to move
	between days.
	
	* week_view.c (week_view_key_press_event): Replace big list of
	"if" statements with switch.  Use left/right keys to move between
	weeks.
	(draw_expose_event): Draw cursor in blue, not red, to reassure
	users that nothing is wrong.  Remove ugly grey bar on left of
	screen.  Add "wide mode" with date labels on left and first event
	on same line as label.	

	* month_view.c (draw_expose_event): Draw cursor in blue, not red.